[package]
name = "actix-settings"
version = "0.6.0"
authors = [
    "Joey Ezechiels <joey.ezechiels@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
edition = "2018"
description = "Easily manage Actix Web's settings from a TOML file and environment variables"
license = "MIT OR Apache-2.0"

[dependencies]
actix-http = "3"
actix-service = "2"
actix-web = "4"

ioe = "0.5"
once_cell = "1.13"
regex = "1.5.5"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "1", optional = true }
openssl = { version = "0.10", optional = true }
[dev-dependencies]
env_logger = "0.10"

[features]
default = ["rustls"]
rustls = ["actix-web/rustls", "dep:rustls", "dep:rustls-pemfile"]
openssl = ["actix-web/openssl", "dep:openssl"]
